set name of release jar to openmsx-launcher.jar

--- a/java/openmsx-launcher-build/pom.xml
+++ b/java/openmsx-launcher-build/pom.xml
@@ -44,6 +44,8 @@
 					<descriptors>
 						<descriptor>framework_bin.xml</descriptor>
 					</descriptors>
+					<finalName>openmsx-launcher</finalName>
+					<appendAssemblyId>false</appendAssemblyId>
 				</configuration>
 			</plugin>
 		</plugins>
