--- a/java/openmsx-launcher-build/pom.xml
+++ b/java/openmsx-launcher-build/pom.xml
@@ -3,12 +3,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>info.msxlaunchers.openmsx</groupId>
 	<artifactId>openmsx-launcher-build</artifactId>
-	<version>1.5</version>
+	<version>1.6</version>
 	<packaging>pom</packaging>
 	<name>openmsx-launcher-build</name>
 	<url>http://maven.apache.org</url>
     <properties>
-        <version>1.5</version>
+        <version>1.6</version>
     </properties>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
@@ -46,6 +46,7 @@
 					</descriptors>
 					<finalName>openmsx-launcher</finalName>
 					<appendAssemblyId>false</appendAssemblyId>
+					<attach>false</attach>
 				</configuration>
 			</plugin>
 		</plugins>
