--- a/java/openmsx-launcher-assembly/pom.xml
+++ b/java/openmsx-launcher-assembly/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>info.msxlaunchers.openmsx</groupId>
 		<artifactId>openmsx-launcher-build</artifactId>
-		<version>${version}</version>
+		<version>1.7</version>
 		<relativePath>../openmsx-launcher-build/pom.xml</relativePath>
 	</parent>
 	<build>
