--- a/java/updater/pom.xml
+++ b/java/updater/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>info.msxlaunchers.openmsx</groupId>
 		<artifactId>openmsx-launcher-build</artifactId>
-		<version>${version}</version>
+		<version>1.7</version>
 		<relativePath>../openmsx-launcher-build/pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
