added IPS patching feature

--- a/java/openmsx-launcher-build/pom.xml
+++ b/java/openmsx-launcher-build/pom.xml
@@ -98,5 +98,6 @@
 		<module>../starter</module>
 		<module>../ui</module>
 		<module>../updater</module>
+		<module>../patch</module>
 	</modules>
 </project>
