--- a/java/openmsx-launcher-assembly/pom.xml
+++ b/java/openmsx-launcher-assembly/pom.xml
@@ -89,5 +89,10 @@
 			<artifactId>ui</artifactId>
 			<version>${version}</version>
 		</dependency>
+		<dependency>
+			<groupId>info.msxlaunchers.openmsx</groupId>
+			<artifactId>patch</artifactId>
+			<version>${version}</version>
+		</dependency>
 	</dependencies>
 </project>
