added UPS patch support

--- a/java/patch/pom.xml
+++ b/java/patch/pom.xml
@@ -14,5 +14,10 @@
 			<artifactId>common</artifactId>
 			<version>${version}</version>
 		</dependency>
+		<dependency>
+			<groupId>info.msxlaunchers.openmsx</groupId>
+			<artifactId>logger</artifactId>
+			<version>${version}</version>
+		</dependency>
 	</dependencies>
 </project>
