--- a/java/ui/pom.xml
+++ b/java/ui/pom.xml
@@ -15,6 +15,7 @@
 				<includes>
 					<include>**/*.properties</include>
 					<include>**/*.png</include>
+					<include>**/*.gif</include>
 				</includes>
 			</resource>
 		</resources>
