added first phase of 'MSX News' feature. Remaining: Settings, new messages icon, more testing

--- a/java/openmsx-launcher-assembly/pom.xml
+++ b/java/openmsx-launcher-assembly/pom.xml
@@ -94,5 +94,10 @@
 			<artifactId>patch</artifactId>
 			<version>${version}</version>
 		</dependency>
+		<dependency>
+			<groupId>info.msxlaunchers.openmsx</groupId>
+			<artifactId>feed</artifactId>
+			<version>${version}</version>
+		</dependency>
 	</dependencies>
 </project>
