--- a/java/openmsx-launcher-build/pom.xml
+++ b/java/openmsx-launcher-build/pom.xml
@@ -99,5 +99,6 @@
 		<module>../ui</module>
 		<module>../updater</module>
 		<module>../patch</module>
+		<module>../feed</module>
 	</modules>
 </project>
