Find related games - stage #4: more changes

--- a/java/openmsx-launcher-assembly/pom.xml
+++ b/java/openmsx-launcher-assembly/pom.xml
@@ -99,5 +99,10 @@
 			<artifactId>feed</artifactId>
 			<version>${version}</version>
 		</dependency>
+		<dependency>
+			<groupId>info.msxlaunchers.openmsx</groupId>
+			<artifactId>related</artifactId>
+			<version>${version}</version>
+		</dependency>
 	</dependencies>
 </project>
