--- a/java/openmsx-launcher-build/pom.xml
+++ b/java/openmsx-launcher-build/pom.xml
@@ -119,5 +119,6 @@
 		<module>../updater</module>
 		<module>../patch</module>
 		<module>../feed</module>
+		<module>../related</module>
 	</modules>
 </project>
