Added efficiency to extra data loading by caching results

--- a/java/extra/pom.xml
+++ b/java/extra/pom.xml
@@ -19,5 +19,10 @@
 			<artifactId>data</artifactId>
 			<version>${version}</version>
 		</dependency>
+		<dependency>
+			<groupId>info.msxlaunchers.openmsx</groupId>
+			<artifactId>logger</artifactId>
+			<version>${version}</version>
+		</dependency>
 	</dependencies>
 </project>
