added missing dependency (not sure how this even worked in the past)

--- a/java/emulator/pom.xml
+++ b/java/emulator/pom.xml
@@ -34,5 +34,10 @@
 			<artifactId>persistence</artifactId>
 			<version>${version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.inject.extensions</groupId>
+			<artifactId>guice-multibindings</artifactId>
+			<version>3.0</version>
+		</dependency>
 	</dependencies>
 </project>
