LHA decompression - phase 1 - now you can decompress LZH file through UI

--- a/java/openmsx-launcher-build/pom.xml
+++ b/java/openmsx-launcher-build/pom.xml
@@ -120,5 +120,6 @@
 		<module>../patch</module>
 		<module>../feed</module>
 		<module>../related</module>
+		<module>../decompressor</module>
 	</modules>
 </project>
