LHA decompression - phase 2 - handle when extracted file exists already plus a lot of refactoring

--- a/java/openmsx-launcher-build/pom.xml
+++ b/java/openmsx-launcher-build/pom.xml
@@ -120,6 +120,6 @@
 		<module>../patch</module>
 		<module>../feed</module>
 		<module>../related</module>
-		<module>../decompressor</module>
+		<module>../extractor</module>
 	</modules>
 </project>
