added dependency on new project and jar

--- a/java/openmsx-launcher-assembly/pom.xml
+++ b/java/openmsx-launcher-assembly/pom.xml
@@ -104,5 +104,10 @@
 			<artifactId>related</artifactId>
 			<version>${version}</version>
 		</dependency>
+		<dependency>
+			<groupId>info.msxlaunchers.openmsx</groupId>
+			<artifactId>extractor</artifactId>
+			<version>${version}</version>
+		</dependency>
 	</dependencies>
 </project>
